tests/ui/endpoint/custom_method_invalid_expr.stderr
error: unexpected token
 --> tests/ui/endpoint/custom_method_invalid_expr.rs:8:21
  |
8 | #[endpoint(method = "I like pizza", uri = "custom_read")]
  |                     ^^^^^^^^^^^^^^
